; ModuleID = '/home/carl/AnghaBench/ish/fs/extr_fake.c_db_exec.c'
source_filename = "/home/carl/AnghaBench/ish/fs/extr_fake.c_db_exec.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mount = type { i32 }

@SQLITE_ROW = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.mount*, i32*)* @db_exec to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @db_exec(%struct.mount* %0, i32* %1) #0 {
  %3 = alloca %struct.mount*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  store %struct.mount* %0, %struct.mount** %3, align 8
  store i32* %1, i32** %4, align 8
  %6 = load i32*, i32** %4, align 8
  %7 = call i32 @sqlite3_step(i32* %6)
  store i32 %7, i32* %5, align 4
  %8 = load %struct.mount*, %struct.mount** %3, align 8
  %9 = call i32 @db_check_error(%struct.mount* %8)
  %10 = load i32, i32* %5, align 4
  %11 = load i32, i32* @SQLITE_ROW, align 4
  %12 = icmp eq i32 %10, %11
  %13 = zext i1 %12 to i32
  ret i32 %13
}

declare dso_local i32 @sqlite3_step(i32*) #1

declare dso_local i32 @db_check_error(%struct.mount*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
